--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "~4.16.0",
     "promise": "^8.0.2",
     "querystring": "~0.2.0",
-    "request": "~2.83.0"
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
