--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "~4.16.0",
+    "json2csv": "^4.3.1",
     "promise": "^8.0.2",
     "querystring": "~0.2.0",
     "request": "^2.83.0",
