--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "json2csv": "^4.3.1",
+    "path": "^0.12.7",
     "promise": "^8.0.2",
     "querystring": "~0.2.0",
     "request": "^2.83.0",
